# mikrorozw

./: CMakeLists.txt  a.out  binaryOP.c  binary_op.s  encode.c  encode.s  facta.s  func.c  func.s  m_func.s  main.c  sum_ascii.s  sumascii.c
